# printing_platform

./: .gitignore  Cargo.toml  README.md  config.toml  后端设计概要.md  项目需求文档.md
docs/: 目标打印机能力与状态测试报告.md  部署说明.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  main.js  notification.js  router.js  session.js  styles.css
frontend/src/components/: ConfirmDialog.vue  PasswordField.vue
frontend/src/views/: AdminHistory.vue  AdminQueue.vue  AdminUsers.vue  HistoryView.vue  LoginView.vue  QueueView.vue  ReviewCenter.vue  SettingsView.vue  StatsView.vue  SubmitPrint.vue  SystemSettings.vue
scripts/: convert-office.ps1  printer-backend.ps1  windows.ps1
src/: app.rs  config.rs  error.rs  main.rs
src/auth/: login.rs  middleware.rs  mod.rs  session.rs
src/db/: migrate.rs  mod.rs  models.rs  pool.rs
src/routes/: admin.rs  health.rs  history.rs  mod.rs  print.rs  queue.rs  user.rs
src/services/: audit.rs  cleanup.rs  converter.rs  import.rs  mod.rs  print_service.rs  printer.rs  queue_manager.rs  quota.rs  settings.rs
src/utils/: file.rs  mod.rs  windows_service.rs
src/ws/: handler.rs  mod.rs
web/: app.js  index.html  styles.css
